--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -110,6 +110,17 @@
                      </li>
                      {% endif %}
                    {% endfor %}
+
+                   <!-- Next Arrow link -->
+                   {% if listing.has_next %}
+                   <li class="page-item">
+                        <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a> 
+                   </li>
+                   {% else %}
+                   <li class="page-item disabled">
+                        <a class="page-link">&raquo;</a>
+                   </li>
+                   {% endif %}
                 </ul>
                 {% endif %}
             </div>
