--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -89,7 +89,8 @@
             <div class="col-md-12">
                 {% if listings.has_other_pages %}
                 <ul class="pagination">
-                   {% if listing.has_previous %}
+                    <!-- Previous Arrow link -->
+                   {% if listings.has_previous %}
                    <li class="page-item">
                         <a href="?page={{listings.previous_page_number}}" class="page-link">&laquo;</a> 
                    </li>
@@ -112,7 +113,7 @@
                    {% endfor %}
 
                    <!-- Next Arrow link -->
-                   {% if listing.has_next %}
+                   {% if listings.has_next %}
                    <li class="page-item">
                         <a href="?page={{listings.next_page_number}}" class="page-link">&raquo;</a> 
                    </li>
