--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -68,39 +68,23 @@
         <div class="container">
             <h2 class="text-center">Our Team</h2>
             <div class="row text-center">
-                <div class="col-md-4">
-                    <img src="assets/img/realtors/kyle.jpg" alt="" class="rounded-circle mb-3">
-                    <h4>Kyle Brown</h4>
-                    <p class="text-success">
-                    <i class="fas fa-award text-success mb-3"></i> Realtor</p>
-                    <hr>
-                    <p>
-                    <i class="fas fa-phone"></i> (555)-555-5555</p>
-                    <p>
-                    <i class="fas fa-envelope-open"></i> kyle@btrealestate.co</p>
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/img/realtors/mark.jpg" alt="" class="rounded-circle mb-3">
-                    <h4>Mark Hudson</h4>
-                    <p class="text-success">Realtor</p>
-                    <hr>
-                    <p>
-                    <i class="fas fa-phone"></i> (444)-444-4444</p>
-                    <p>
-                    <i class="fas fa-envelope-open"></i> mark@btrealestate.co</p>
-                </div>
-
-                <div class="col-md-4">
-                    <img src="assets/img/realtors/jenny.jpg" alt="" class="rounded-circle mb-3">
-                    <h4>Jenny Johnson</h4>
-                    <p class="text-success">Realtor</p>
-                    <hr>
-                    <p>
-                    <i class="fas fa-phone"></i> (333)-333-3333</p>
-                    <p>
-                    <i class="fas fa-envelope-open"></i> jenny@btrealestate.co</p>
-                </div>
+                {% if realtor %}
+                    {% for realtors in realtor %}
+                    <div class="col-md-4">
+                        <img src="{{realtors.photo.url}}" alt="" class="rounded-circle mb-3">
+                        <h4>{{ realtors.name }}</h4>
+                        <p class="text-success">
+                        <i class="fas fa-award text-success mb-3"></i> {{ realtors.description }}</p>
+                        <hr>
+                        <p>
+                        <i class="fas fa-phone"></i> {{ realtors.phone }}</p>
+                        <p>
+                        <i class="fas fa-envelope-open"></i> {{ realtors.email }}</p>
+                    </div>
+                    {% endfor %}
+                {% else %}
+                    <div class="col-md-12"> No Realtors</div>
+                {% endif %}
             </div>
         </div>
     </section>
