--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -40,16 +40,19 @@
                     commodi id libero eveniet harum perferendis laborum molestias quia.</p>
                 </div>
             <div class="col-md-4">
-                <div class="card">
-                <img class="card-img-top" src="assets/img/realtors/kyle.jpg" alt="Seller of the month">
-                    <div class="card-body">
-                        <h5 class="card-title">Seller Of The Month</h5>
-                        <h6 class="text-secondary">Kyle Brown</h6>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis nesciunt amet, illo itaque similique repellat.
-                        content.
-                        </p>
+                {% if mvp %}
+                    {% for realtor in mvp %}
+                    <div class="card">
+                    <img class="card-img-top" src="{{realtor.photo.url}}" alt="Seller of the month">
+                        <div class="card-body">
+                            <h5 class="card-title">Seller Of The Month</h5>
+                            <h6 class="text-secondary">{{realtor.name}}</h6>
+                            <p class="card-text">{{realtor.description}}
+                            </p>
+                        </div>
                     </div>
-                </div>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
     </div>
@@ -60,7 +63,7 @@
         <h2 class="display-4">We Work For You</h2>
         <h4>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem velit aperiam, unde aliquid at similique!</h4>
         <hr>
-        <a href="listings.html" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
+        <a href="{% url 'listings' %}" class="btn btn-secondary text-white btn-lg">View Our Featured Listings</a>
     </section>
     
       <!-- Team -->
