--- a/templates/listings/listings.html
+++ b/templates/listings/listings.html
@@ -48,7 +48,7 @@
                         <div class="listing-heading text-center">
                             <h4 class="text-primary">{{listing.title}}</h4>
                             <p>
-                                <i class="fas fa-map-marker text-secondary"></i> {{ listing.address }}, {{listing.state}}, {{ listing.city }}</p>
+                                <i class="fas fa-map-marker text-secondary"></i> {{ listing.address }},  {{ listing.city }}, {{listing.county}}</p>
                         </div>
                         <hr>
                         <div class="row py-2 text-secondary">
