making search field vales fixed after search results

--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -12,12 +12,12 @@
             <div class="form-row">
               <div class="col-md-4 mb-3">
                 <label class="sr-only">Keywords</label>
-                <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)">
+                <input type="text" name="keywords" class="form-control" placeholder="Keyword (Pool, Garage, etc)" value="{{ values.keywords }}">
               </div>
 
               <div class="col-md-4 mb-3">
                 <label class="sr-only">City</label>
-                <input type="text" name="city" class="form-control" placeholder="City">
+                <input type="text" name="city" class="form-control" placeholder="City" value="{{ values.city }}">
               </div>
 
               <div class="col-md-4 mb-3">
@@ -25,7 +25,14 @@
                 <select name="county" class="form-control">
                   <option selected="true" disabled="disabled">County (All)</option>
                   {% for key,value in county_choices.items %}
-                    <option value="{{ key }}">{{ value }}</option>
+                    
+                    <!-- Keeping county search value after results -->
+                    <option value="{{ key }}" 
+                
+                    {% if key == values.county %}
+                      selected
+                    {% endif %}>
+                    {{ value }}</option>
                   {% endfor %}
                 </select>
               </div>
@@ -35,17 +42,29 @@
               <div class="col-md-6 mb-3">
                 <label class="sr-only">Bedrooms</label>
                 <select name="bedrooms" class="form-control">
+
+                    <!-- Keeping bedroom search value after results -->
                   <option selected="true" disabled="disabled">Bedrooms (Any)</option>
                   {% for key,value in bedroom_choices.items %}
-                  <option value="{{ key }}">{{ value }}</option>
+                  <option value="{{ key }}"
+                  {% if key == values.bedrooms %}
+                      selected
+                    {% endif %}>
+                  {{ value }}</option>
                   {% endfor %}
                 </select>
               </div>
               <div class="col-md-6 mb-3">
                 <select name="price" class="form-control">
+
+                    <!-- Keeping Price search value after results -->
                   <option selected="true" disabled="disabled">Max Price (Any)</option>
                   {% for key,value in price_choices.items %}
-                  <option value="{{key}}">{{ value }}</option>
+                  <option value="{{key}}"
+                    {% if key == values.price %}
+                      selected
+                    {% endif %}>
+                  {{ value }}</option>
                   {% endfor %}
                 </select>
               </div>
