hidding login and register links when logged in

--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -41,29 +41,53 @@
 
         <ul class="navbar-nav ml-auto">
 
+          {% if user.is_authenticated %}
+
           <!-- If statement highlighting selected path -->
           <li 
-          {% if 'register' in request.path %}
+          {% if 'dashboard' in request.path %}
             class="nav-item active mr-3"
           {% else %}
             class="nav-item mr-3"
           {% endif %}>
-            <a class="nav-link" href="{% url 'register' %}">
-              <i class="fas fa-user-plus"></i> Register</a>
+            <a class="nav-link" href="{% url 'dashboard' %}">
+              <i class="fas fa-user-plus"></i> Welcome {{ user.username }} (DASHBOARD)</a>
           </li>
 
-          <!-- If statement highlighting selected path -->
-          <li 
-          {% if 'listings' in request.path %}
-            class="nav-item active mr-3"
+          <li class="nav-item active mr-3">
+            <a class="nav-link" href="javascript: {document.getElementById('logout').submit()}">
+              <i class="fas fa-sign-out-alt"></i>Logout</a>
+              <form action="{% url 'logout' %}" method="POST" id="logout">
+                {% csrf_token%}
+                <input type="hidden">
+                </form>
+          </li>
           {% else %}
-            class="nav-item mr-3"
-          {% endif %}>
-            <a class="nav-link" href="{% url 'login' %}">
-              <i class="fas fa-sign-in-alt"></i>
+            <li 
+            {% if 'register' in request.path %}
+              class="nav-item active mr-3"
+            {% else %}
+              class="nav-item mr-3"
+            {% endif %}>
+              <a class="nav-link" href="{% url 'register' %}">
+                <i class="fas fa-user-plus"></i> Register</a>
+            </li>
 
-              Login</a>
-          </li>
+            <!-- If statement highlighting selected path -->
+            <li 
+            {% if 'listings' in request.path %}
+              class="nav-item active mr-3"
+            {% else %}
+              class="nav-item mr-3"
+            {% endif %}>
+              <a class="nav-link" href="{% url 'login' %}">
+                <i class="fas fa-sign-in-alt"></i>
+
+                Login</a>
+            </li>
+          {% endif %}
+          <!-- If statement highlighting selected path -->
+          
         </ul>
       </div>
     </div>
