--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
+{% block title%} | {{user.username}}'s Dashboard {% endblock %}
 {% block content %}
 <section id="showcase-inner" class="py-5 text-white">
         <div class="container">
           <div class="row text-center">
             <div class="col-md-12">
               <h1 class="display-4">User Dashboard</h1>
-              <p class="lead">Manage your BT Real Estate account</p>
+              <p class="lead">Manage your Apex Real Estate account</p>
             </div>
           </div>
         </div>
@@ -35,7 +35,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12">
-              <h2>Welcome John</h2>
+              <h2>Welcome {{user.username}}</h2>
               <p>Here are the property listings that you have inquired about</p>
               <table class="table">
                 <thead>
