--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
+{% block title%} | Account Login {% endblock %}
 {% block content %}
 <section id="login" class="bg-light py-5">
     <div class="container">
