--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <!-- light box -->
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
-    <title>APEX REAL ESTATE</title>
+    <title>APEX REAL ESTATE {% block title%}{% endblock %}</title>
 </head>
 <body>    
     <!-- Top Bar -->
