--- a/templates/listings/search.html
+++ b/templates/listings/search.html
@@ -1,6 +1,7 @@
 {% extends 'base.html'%}
 
 {% load humanize %}
+{% block title%} | Find A Property {% endblock %}
 {% block content %}
 
 <section id="showcase-inner" class="showcase-search text-white py-5">
