--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
-
+{% block title%} | Register Account {% endblock %}
 {% block content %}
 <section id="register" class="bg-light py-5">
     <div class="container">
