--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html'%}
 {% load humanize %}
-
+{% block title%} | Welcome {% endblock %}
 {% block content %}
   <!-- Showcase -->
   <section id="showcase">
