--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -167,18 +167,31 @@
               </button>
             </div>
             <div class="modal-body">
-              <form>
+              <form action="{% url 'contact' %}" method="POST">
+                {% csrf_token %}
+                {% if user.is_authenticated %}
+                  <input type="hidden" name="user_id" value="{{ user.id }}" >
+                {% else %}
+                  <input type="hidden" name="user_id" value="0">
+                {% endif %}  
+                <!-- sending info to realtor email -->
+                <input type="hidden" name="realtor_email" value="{{ listing.realtor.email}}">
+                <input type="hidden" name="realtor_email" value="{{ listing.id}}">
                 <div class="form-group">
                   <label for="property_name" class="col-form-label">Property:</label>
-                  <input type="text" name="listing" class="form-control" value="45 Drivewood Cirlce" disabled>
+                  <input type="text" name="listing" class="form-control" value={{listing.title}}" disabled>
                 </div>
                 <div class="form-group">
                   <label for="name" class="col-form-label">Name:</label>
-                  <input type="text" name="name" class="form-control" required>
+
+                  <!-- If statement auto filling user name if logged in -->
+                  <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.name}}" {% endif %}required>
                 </div>
                 <div class="form-group">
                   <label for="email" class="col-form-label">Email:</label>
-                  <input type="email" name="email" class="form-control" required>
+                  
+                  <!-- If statement auto filling user email if logged in -->
+                  <input type="email" name="email" class="form-control"  {% if user.is_authenticated %} value="{{ user.email}}" {% endif %}required>
                 </div>
                 <div class="form-group">
                   <label for="phone" class="col-form-label">Phone:</label>
