--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -185,7 +185,7 @@
                   <label for="name" class="col-form-label">Name:</label>
 
                   <!-- If statement auto filling user name if logged in -->
-                  <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name}}" {% endif %}required>
+                  <input type="text" name="name" class="form-control" {% if user.is_authenticated %} value="{{ user.first_name}} {{ user.last_name}}" {% endif %}required>
                 </div>
                 <div class="form-group">
                   <label for="email" class="col-form-label">Email:</label>
