--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -32,6 +32,8 @@
           </nav>
         </div>
       </section>
+      <!-- Alerts -->
+      {% include 'partials/_alerts.html' %}
     
       <!-- Listing -->
       <section id="listing" class="py-4">
